syntax = "proto3";

service ProductService {
  rpc AddProduct (ProductRequest) returns (ProductResponse);
  rpc UpdateProduct (ProductUpdateRequest) returns (ProductResponse);
  rpc GetProduct (ProductNameRequest) returns (ProductGetResponse);
  rpc DeleteProduct (ProductDeleteRequest) returns (ProductResponse);
}

// Requests

message ProductRequest {
  string brand = 1;
  string name = 2;
  float costUnit = 3;
  float salePrice = 4;
}

message ProductUpdateRequest {
  int32 id = 1;
  string brand = 2;
  string name = 3;
  float costUnit = 4;
  float salePrice = 5;
}

message ProductNameRequest {
  string name = 1;
}

message ProductDeleteRequest {
  int32 id = 1;
  string name = 2;
}

// Responses

message ProductResponse {
  string message = 1;
  bool success = 2;
}

message ProductGetResponse {
  int32 id = 1;
  string brand = 2;
  string name = 3;
  float costUnit = 4;
  float salePrice = 5;
}